Employer chart responsive and bug fixing

--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -40,8 +40,8 @@
            <li class="nav-item dropdown bg-white">
           <a class="btn btn-sm btn-outline-primary px-3 dropdown-toggle dropdown-toggles " href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="margin-top:23px;">						 
-            <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/employer/login')"  type="button">Employer</a></li>								
-            <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/user/login')"  type="button">Jobseeker</a></li>								
+            <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/employer/login')"  >Employer</a></li>								
+            <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/user/login')"  >Jobseeker</a></li>								
           </ul>
           </li>
         </ul>
