--- a/frontend/src/app/modules/features/common/landing/landing.component.html
+++ b/frontend/src/app/modules/features/common/landing/landing.component.html
@@ -41,14 +41,14 @@
 					<div class="left-sec animate__animated  animate__fadeInLeft">					
 						<h1>Employer</h1>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </p>
-						<a (click)="onRedirectUrl('/auth/employer/login')"  type="button" class="btn empl-btn my-3">Get Started</a>
+						<a (click)="onRedirectUrl('/auth/employer/login')" class="btn empl-btn my-3">Get Started</a>
 					</div>
 				</div>
 				<div class="col-lg-6">	
 					<div class="right-sec animate__animated  animate__fadeInRight">						
 						<h1>Talent</h1>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
-						<a (click)="onRedirectUrl('/auth/user/login')" type="button" class="btn tale-btn my-3">Get Started</a>
+						<a (click)="onRedirectUrl('/auth/user/login')"  class="btn tale-btn my-3">Get Started</a>
 					</div>
 				</div>	
 			</div>
