--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -141,9 +141,16 @@
 															</div>	
 														</div>
 														<div class="col-lg-3">
-															<a [class.disabled]="OpenMatchPopups(matchingUsers)" [ngClass]="(OpenMatchPopups(matchingUsers) == true)?'':'a-class'"  [routerLink]="['/employer/job-multiple-candidate-matches']"  [queryParams]="{jobId:'all',path:'userscoring',id:matchingUsers?.profile?.id,employeeId: postedJobsDetails?.company.id }" href="javascript:;" >
-																		<small><i class="fab fa-buffer"></i> {{"shared.viewOtherMatches" | translate}}  </small>
-																	</a>
+															<ng-container *ngIf="!OpenMatchPopups(matchingUsers)">
+																<a [routerLink]="['/employer/job-multiple-candidate-matches']"  [queryParams]="{jobId:'all',path:'userscoring',id:matchingUsers?.profile?.id,employeeId: matchingUsers?.job?.company }" >
+																	<small><i class="fab fa-buffer"></i> {{"shared.viewOtherMatches" | translate}}  </small>
+																</a>
+															</ng-container>
+															<ng-container *ngIf="OpenMatchPopups(matchingUsers)">
+																<a>
+																	<small><i class="fab fa-buffer"></i> {{"shared.viewOtherMatches" | translate}}  </small>
+																</a>
+															</ng-container>
 														</div>
 													</div>
 												</div>
@@ -184,11 +191,22 @@
 															<a [class.disabled]="!onGetFilteredValue(matchingUsers?.profile?.doc_resume)" href="javascript:;" (click)="onGetFilteredValue(matchingUsers?.profile?.doc_resume) && onToggleResumeForm(true, (matchingUsersMeta?.doc_resume?.path + '/' + matchingUsersMeta?.doc_resume?.folder + '/' + onGetFilteredValue(matchingUsers?.profile?.doc_resume)))" class="mr-3" data-toggle="modal" data-target="#resumeModal">
 																<small><i class="fas fa-file-alt"></i>  {{"shared.resume" | translate}}  </small>
 															</a>
-															<a [class.disabled]="OpenMatchPopups(matchingUsers)"  
+															<ng-container *ngIf="!OpenMatchPopups(matchingUsers)">
+																<a [routerLink]="['/employer/job-multiple-candidate-matches']"  [queryParams]="{jobId:'all',path:'userscoring',id:matchingUsers?.profile?.id,employeeId: matchingUsers?.job?.company }" >
+																	<small><i class="fab fa-buffer"></i> {{"shared.viewOtherMatches" | translate}}  </small>
+																</a>
+															</ng-container>
+															<ng-container *ngIf="OpenMatchPopups(matchingUsers)">
+																<a>
+																	<small><i class="fab fa-buffer"></i> {{"shared.viewOtherMatches" | translate}}  </small>
+																</a>
+															</ng-container>
+															<!-- <a [class.disabled]="OpenMatchPopups(matchingUsers)"  
 															  [routerLink]="['/employer/job-multiple-candidate-matches']"  [queryParams]="{jobId:'all',path:'userscoring',id:matchingUsers?.profile?.id,employeeId: postedJobsDetails?.company.id }" href="javascript:;"
 															class="mr-3" >
 																<small><i class="fab fa-buffer"></i>  {{"shared.viewOtherMatches" | translate}}  </small>
-															</a><!-- 
+															</a> -->
+															<!-- 
 															<a [routerLink]="['/employer/job-multiple-candidate-matches']" [queryParams]="{id: matchingUsers?.profile?.id, employeeId: postedJobsDetails?.company,path:'userscoring'}"  class="mr-3" >
 																<small><i class="fab fa-buffer"></i> View Other Matches</small>
 															</a> -->
@@ -244,9 +262,20 @@
 															<a [class.disabled]="!onGetFilteredValue(matchingUsersNew?.profile?.doc_resume)" href="javascript:;" (click)="onGetFilteredValue(matchingUsersNew?.profile?.doc_resume) && onToggleResumeForm(true, (matchingUsersMeta?.doc_resume?.path + '/' + matchingUsersMeta?.doc_resume?.folder + '/' + onGetFilteredValue(matchingUsersNew?.profile?.doc_resume)))" class="mr-3" data-toggle="modal" data-target="#resumeModal">
 																<small><i class="fas fa-file-alt"></i>  {{"shared.resume" | translate}}</small>
 															</a>
-															<a [class.disabled]="OpenMatchPopups(matchingUsersNew)"    [routerLink]="['/employer/job-multiple-candidate-matches']"  [queryParams]="{jobId:'all',path:'userscoring',id:matchingUsersNew?.profile?.id,employeeId: postedJobsDetails?.company.id }" href="javascript:;" class="mr-3" >
+															<ng-container *ngIf="!OpenMatchPopups(matchingUsersNew)">
+																<a [routerLink]="['/employer/job-multiple-candidate-matches']"  [queryParams]="{jobId:'all',path:'userscoring',id:matchingUsersNew?.profile?.id,employeeId: matchingUsersNew?.job?.company }" >
+																	<small><i class="fab fa-buffer"></i> {{"shared.viewOtherMatches" | translate}}  </small>
+																</a>
+															</ng-container>
+															<ng-container *ngIf="OpenMatchPopups(matchingUsersNew)">
+																<a>
+																	<small><i class="fab fa-buffer"></i> {{"shared.viewOtherMatches" | translate}}  </small>
+																</a>
+															</ng-container>
+															<!-- <a [class.disabled]="OpenMatchPopups(matchingUsersNew)"    [routerLink]="['/employer/job-multiple-candidate-matches']"  [queryParams]="{jobId:'all',path:'userscoring',id:matchingUsersNew?.profile?.id,employeeId: postedJobsDetails?.company.id }" href="javascript:;" class="mr-3" >
 																<small><i class="fab fa-buffer"></i>  {{"shared.viewOtherMatches" | translate}} </small>
-															</a><!-- 
+															</a> -->
+															<!-- 
 															<a [routerLink]="['/employer/job-multiple-candidate-matches']" [queryParams]="{id: matchingUsersNew?.profile?.id, employeeId: postedJobsDetails?.company,path:'userscoring'}"  class="mr-3" >
 																<small><i class="fab fa-buffer"></i> View Other Matches</small>
 															</a> -->
