--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -148,12 +148,48 @@
 			</div>
 			<div class="col-lg-5 info">
 				<ul class="list-group">
-					<li class="list-group-item text-capitalize m-0">{{onFindDomainFromID(postJobForm?.value?.requirement?.domain)}}</li>
+					<li class="list-group-item text-uppercase" *ngIf="postJobForm?.value?.requirement?.domain">
+						<ng-container *ngIf="postJobForm?.value?.requirement?.domain.length; else elseSkillsTemplatess">
+							{{onFindDomainFromID(postJobForm?.value?.requirement?.domain)}}
+						</ng-container>
+						<ng-template #elseSkillsTemplatess>
+							<button *ngIf="postJobForm?.value?.requirement?.domain?.length==0 " style="font-size: 10px;padding: 5px;" (click)="onOpenCriteriaModal('domain')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			>{{"shared.add" | translate}}  </button>
+						</ng-template>
+						
+					</li>
+					<li class="list-group-item text-uppercase" *ngIf="!postJobForm?.value?.requirement?.domain">
+							<button style="font-size: 10px;padding: 5px;" (click)="onOpenCriteriaModal('domain')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			>{{"shared.add" | translate}}  </button>
+					</li>
 				</ul>
+				
 			</div>
 			<div class="col-lg-4">
 				<ul class="list-group">
-					<li class="list-group-item border-0 p-0  m-0 ">							
+					<li class="list-group-item border-0 p-0  m-0 " *ngIf="!postJobForm?.value?.requirement?.domain || !postJobForm?.value?.requirement?.domain?.length || postJobForm?.value?.requirement?.domain?.length==0 " >							
+						<div class="d-flex">
+							<div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio"  disabled    value="0"  id="customRadio7A" name="domain" formControlName="domain"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio7A">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio"  disabled   value="1"  id="customRadio7B" name="domain" formControlName="domain"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio7B">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+								  <input type="radio"  disabled   value="2"  id="customRadio7C" name="domain" formControlName="domain"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio7C">&nbsp;</label>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="list-group-item border-0 p-0  m-0 " *ngIf="postJobForm?.value?.requirement?.domain && postJobForm?.value?.requirement?.domain?.length && postJobForm?.value?.requirement?.domain?.length !=0 " >							
 						<div class="d-flex">
 							<div class="rdn-radio">
 								<div class="custom-control custom-radio">
@@ -321,7 +357,7 @@
 			</div>
 			<div class="col-lg-5 info">
 				<ul class="list-group">
-					<li class="list-group-item text-uppercase">
+					<li class="list-group-item text-uppercase" *ngIf="postJobForm?.value?.requirement?.programming_skills">
 						<ng-container *ngIf="postJobForm?.value?.requirement?.programming_skills.length; else elseSkillsTemplates">
 							{{postJobForm?.value?.requirement?.programming_skills}}
 						</ng-container>
@@ -330,6 +366,10 @@
 			>{{"shared.add" | translate}}  </button>
 						</ng-template>
 						
+					</li>
+					<li class="list-group-item text-uppercase" *ngIf="!postJobForm?.value?.requirement?.programming_skills">
+							<button style="font-size: 10px;padding: 5px;" (click)="onOpenCriteriaModal('programming_skills')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			>{{"shared.add" | translate}}  </button>
 					</li>
 				</ul>
 			</div>
@@ -393,23 +433,50 @@
 				</ul>
 			</div>
 			<div class="col-lg-5 info">
+				
 				<ul class="list-group">
-					<li class="list-group-item text-uppercase">
-						<ng-container *ngIf="postJobForm?.value?.requirement?.optinal_skills.length; else elseSkillsTemplate">
-							<!-- <small class="m-0 float-left" *ngFor="let item of postJobForm?.value?.requirement?.optinal_skills">
-								<span class="float-left">{{item}}{{last ? '' : '&nbsp;,&nbsp;&nbsp;'}}</span>
-							</small> -->
+					<li class="list-group-item text-uppercase" *ngIf="postJobForm?.value?.requirement?.optinal_skills">
+						<ng-container *ngIf="postJobForm?.value?.requirement?.optinal_skills.length; else elseSkillsTemplatesss">
 							{{postJobForm?.value?.requirement?.optinal_skills}}
 						</ng-container>
-						<ng-template #elseSkillsTemplate>
-							<li>--</li>
+						<ng-template #elseSkillsTemplatesss>
+							<button *ngIf="postJobForm?.value?.requirement?.optinal_skills?.length==0 " style="font-size: 10px;padding: 5px;" (click)="onOpenCriteriaModal('optinal_skill')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			>{{"shared.add" | translate}}  </button>
 						</ng-template>
+						
+					</li>
+					<li class="list-group-item text-uppercase" *ngIf="!postJobForm?.value?.requirement?.optinal_skills">
+							<button style="font-size: 10px;padding: 5px;" (click)="onOpenCriteriaModal('optinal_skill')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			>{{"shared.add" | translate}}  </button>
 					</li>
 				</ul>
+				
 			</div>
 			<div class="col-lg-4">
 				<ul class="list-group">
-					<li class="list-group-item border-0 p-0  m-0 ">							
+					<li class="list-group-item border-0 p-0  m-0 " *ngIf="!postJobForm?.value?.requirement?.optinal_skills || !postJobForm?.value?.requirement?.optinal_skills?.length || postJobForm?.value?.requirement?.optinal_skills?.length==0 ">							
+						<div class="d-flex">
+							<div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled    value="0"  id="customRadio11A" name="optinal_skills" formControlName="optinal_skills"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio11A">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled   value="1"  id="customRadio11B" name="optinal_skills" formControlName="optinal_skills"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio11B">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+								  <input type="radio" disabled   value="2"  id="customRadio11C" name="optinal_skills" formControlName="optinal_skills"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio11C">&nbsp;</label>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="list-group-item border-0 p-0  m-0 " *ngIf="postJobForm?.value?.requirement?.optinal_skills && postJobForm?.value?.requirement?.optinal_skills?.length && postJobForm?.value?.requirement?.optinal_skills?.length !=0 ">							
 						<div class="d-flex">
 							<div class="rdn-radio">
 								<div class="custom-control custom-radio">
@@ -733,13 +800,41 @@
 				</ul>
 			</div>
 			<div class="col-lg-5 info">
-				<ul class="list-group">
+				<ul class="list-group" *ngIf="!postJobForm?.value?.requirement?.end_to_end_implementation">
+					<li class="list-group-item">
+						<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('end_to_end_implementation')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">{{"shared.add" | translate}}  </button>
+					</li>
+				</ul>
+				<ul class="list-group" *ngIf="postJobForm?.value?.requirement?.end_to_end_implementation">
 					<li class="list-group-item">{{postJobForm?.value?.requirement?.end_to_end_implementation}}</li>
 				</ul>
 			</div>
 			<div class="col-lg-4">
 				<ul class="list-group">
-					<li class="list-group-item border-0 p-0 m-0 ">							
+					<li class="list-group-item border-0 p-0 m-0 " *ngIf="!postJobForm?.value?.requirement?.end_to_end_implementation">							
+						<div class="d-flex">
+							<div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled  value="0"  id="customRadio19A" name="end_to_end_implementation" formControlName="end_to_end_implementation"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio19A">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled   value="1"  id="customRadio19B" name="end_to_end_implementation" formControlName="end_to_end_implementation"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio19B">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+								  <input type="radio" disabled    value="2"  id="customRadio19C" name="end_to_end_implementation" formControlName="end_to_end_implementation"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio19C">&nbsp;</label>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="list-group-item border-0 p-0 m-0 " *ngIf="postJobForm?.value?.requirement?.end_to_end_implementation">							
 						<div class="d-flex">
 							<div class="rdn-radio">
 								<div class="custom-control custom-radio">
@@ -1100,6 +1195,59 @@
 									(matChipInputTokenEnd)="adds($event)">
 							</mat-chip-list>
 						</mat-form-field>
+					</div>
+				</div>
+			</div>
+			<div class="modal-body"  *ngIf="optinal_skill">
+			
+		
+				<div class="col-lg-12 col-md-6" formGroupName="requirement">
+					<div class=" form-group">
+						<label >{{"userProfile.otherSkills" | translate }}</label>
+						<mat-form-field class="example-chip-list" style="width: 100%;" >					
+							<mat-chip-list #chipLists aria-label="niceToHave">
+								<mat-chip *ngFor="let optinal_skill of optinal_skills" [selectable]="selectable"
+									[removable]="removable" (removed)="removeOptional(optinal_skill)">
+									{{optinal_skill}}
+									<mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+								</mat-chip>
+								<input placeholder=""
+									[matChipInputFor]="chipLists"
+									[matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+									[matChipInputAddOnBlur]="addOnBlur"
+									(matChipInputTokenEnd)="addOptional($event)">
+							</mat-chip-list>
+						</mat-form-field>
+					</div>
+				</div>
+			</div>
+			<div class="modal-body"  *ngIf="domain">
+			
+		
+				<div class="col-lg-12 col-md-6" formGroupName="requirement">
+					<div class=" form-group">
+						<label >{{"userProfile.domainExperience" | translate }}</label>
+						<ngx-select
+							[placeholder]="'Select Domain'"
+							class="text-capitalize"
+							[items]="industriesItems"
+							[multiple]="true"
+							autoClearSearch="true"
+							noResultsFound="No results found"
+							formControlName="domain"
+							optionValueField="id"
+							optionTextField="name"
+						></ngx-select>
+					</div>
+				</div>
+			</div>
+			<div class="modal-body"  *ngIf="end_to_end_implementation">
+			
+		
+				<div class="col-lg-12 col-md-6" formGroupName="requirement">
+					<div class=" form-group">
+						<label >{{"userProfile.endToEnd" | translate }}</label>
+						<input numbersOnly type="text" class="form-control w-25" formControlName="end_to_end_implementation">
 					</div>
 				</div>
 			</div>
