--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -40,8 +40,8 @@
            <li class="nav-item dropdown bg-white">
           <a class="btn btn-sm btn-outline-primary px-3 dropdown-toggle dropdown-toggles " href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="margin-top:23px;">						 
-            <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/employer/login')"  type="button">Employer</a></li>								
-            <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/user/login')"  type="button">Jobseeker</a></li>								
+            <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/employer/login')"  >Employer</a></li>								
+            <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/user/login')"  >Jobseeker</a></li>								
           </ul>
           </li>
         </ul>
@@ -144,7 +144,8 @@
            <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
            <span class="d-flex align-items-center">
-            <ngx-avatar *ngIf="currentEmployerDetails?.first_name || currentEmployerDetails?.last_name" class="float-left mr-2" size="35" name="{{(currentEmployerDetails?.first_name ? currentEmployerDetails?.first_name : '') + ' ' + (currentEmployerDetails?.last_name ? currentEmployerDetails?.last_name : '')}}"></ngx-avatar>
+		    <img class="img-circule" *ngIf="currentEmployerDetails?.photo" [src]="currentEmployerDetails?.photo ? (currentEmployerDetails?.meta?.photo?.path+'/'+ currentEmployerDetails?.meta?.photo?.folder+'/'+currentEmployerDetails?.meta?.photo?.sizes?.medium+'/'+currentEmployerDetails?.photo)+'?v='+ randomNum: 'assets/images/user-img-icon.jpg'">
+            <ngx-avatar *ngIf="!currentEmployerDetails?.photo && (currentEmployerDetails?.first_name || currentEmployerDetails?.last_name)" class="float-left mr-2" size="35" name="{{(currentEmployerDetails?.first_name ? currentEmployerDetails?.first_name : '') + ' ' + (currentEmployerDetails?.last_name ? currentEmployerDetails?.last_name : '')}}"></ngx-avatar>
             <!-- <span class="letter-custom-abb">{{onChangeNameAbb(currentEmployerDetails?.first_name + ' ' + currentEmployerDetails?.last_name)}}</span> -->
             <span class="text-capitalize">{{(currentEmployerDetails?.first_name ? currentEmployerDetails?.first_name : '') + ' ' + (currentEmployerDetails?.last_name ? currentEmployerDetails?.last_name : '')}}</span>
           </span>
